crates/es-fluent-generate/tests/snapshots/generate_tests__label_types_sorted_first.snap
---
source: crates/es-fluent-generate/tests/generate_tests.rs
expression: content
---
## BananaLabel

banana_label_label = Label

## Apple

apple-Red = Red

## Banana

banana-Yellow = Yellow
