crates/es-fluent-generate/tests/snapshots/generate_tests__label_variants_sorted_first_within_group.snap
---
source: crates/es-fluent-generate/tests/generate_tests.rs
expression: content
---
## Fruit

fruit_label = Label
fruit-Apple = Apple
fruit-Banana = Banana
