crates/es-fluent-generate/tests/snapshots/generate_tests__this_types_sorted_first.snap
---
source: crates/es-fluent-generate/tests/generate_tests.rs
expression: content
---
## BananaThis

banana_this_this = This

## Apple

apple-Red = Red

## Banana

banana-Yellow = Yellow
