crates/es-fluent-generate/tests/snapshots/generate_tests__this_variants_sorted_first_within_group.snap
---
source: crates/es-fluent-generate/tests/generate_tests.rs
expression: content
---
## Fruit

fruit_this = This
fruit-Apple = Apple
fruit-Banana = Banana
